--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Charlie</a>
+          <a class="navbar-brand" href="http://charcar.github.io/">Charlie</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
