--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="">Home</a></li>
+            <li class="active"><a href="http://charcar.github.io/">Home</a></li>
             <li><a href="mailto:ccarterjunk@gmail.com">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
