--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="dogblog.html">Work</a></li>
             <li><a href="about.html">Life</a></li>
+            <li><a href="http://charcar.github.io/">Home</a></li>
           </ul>
         </div>
       </div>
